<resources>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="app_name">Edubox</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_login">Hai! Silahkan login untuk melanjutkan</string>
    <string name="title_select_school">Silahkan pilih sekolah</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="nav_halaman_utama">Halaman Utama</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_jadwal_ujian">Jadwal Ujian</string>
    <string name="nav_term_of_use">Term of Use and Privacy Policy</string>
    <string name="nav_bantuan_aplikasi">Nilai</string>
    <string name="nav_nilai">Nilai</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="lanjut">Lanjut</string>
    <string name="login">Login</string>
    <string name="lupa_password">Lupa password</string>
    <string name="term"><u>Term of Use</u></string>
    <string name="privacy"><u>Privacy</u></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pilih_sekolah">Pilih Sekolah</string>
</resources>
