<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".ui.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/title_login"
            android:textAlignment="center"
            android:textSize="@dimen/action_bar"
            android:textStyle="bold"
            android:layout_gravity="center"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_marginTop="50dp"
        >

        <EditText
            android:id="@+id/tv_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:hint="@string/username"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/tv_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_alignParentBottom="true"
        android:paddingBottom="100dp"
        android:textAlignment="center"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:text="@string/lupa_password"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="By using this apps, you agree to the "
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:orientation="horizontal"
            android:textAlignment="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/term"
                android:textColor="@color/colorPrimary"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" and " />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy"
                android:textColor="@color/colorPrimary" />


        </LinearLayout>

        <Button
            android:id="@+id/btn_lanjut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_primary_background"
            android:text="@string/lanjut"
            android:textColor="@android:color/white"

            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>
